Добавление ссылки на профиль.
 Добавлен код на мой профиль в Цифровом университете АлтГУ.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	
 	<body>
 		 <h1>Гаврилов Илья Александрович</h1>
-		 <p>Текст123</p>
+		 <p>Моя новая страница в GitHub!</p>
+		 <a href="https://portal.edu.asu.ru/user/profile.php?id=28385">Ссылка на мой профиль</a>
 	</body>
 </html>
