--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 		 <h1>Гаврилов Илья Александрович</h1>
 		 <p>Моя новая страница в GitHub!</p>
 		 <a href="https://portal.edu.asu.ru/user/profile.php?id=28385">Ссылка на мой профиль</a>
+		 <img src="https://old.bigenc.ru/media/2018/01/30/1235931534/36359.jpg">
 	</body>
 </html>
